buggyapp-selector.yaml
apiVersion: v1
kind: Service
metadata:
  name: buggyapp
spec:
  ports:
  - port: 8080
    protocol: TCP    
    targetPort: 8080
  selector:
    app: buggyapp
